<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ydl.bio.egps2</groupId>
    <artifactId>parent</artifactId>
    <version>2.1</version>
    <packaging>pom</packaging>

    <name>parent</name>
    <modules>
        <module>mainframe</module>
        <module>allmodules</module>
        <module>ydl.lab.utils</module>
        <module>wntevol</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory> <!-- .xml资源所在目录 -->
                <includes> <!-- 包括目录下的 .xml 文件-->
                    <include>**/*.*</include>
                </includes>
                <!-- 源代码要去掉的-->
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
                <filtering>false</filtering> <!-- 暂时不需要管，加上就是了 -->
            </resource>
        </resources>
    </build>


    <repositories>
            <repository>
                <id>central</id>
                <url>https://repo1.maven.org/maven2/</url>
            </repository>


        <repository>
            <id>nexus-aliyun</id>
            <name>Nexus aliyun</name>
            <layout>default</layout>
            <url>https://maven.aliyun.com/nexus/content/groups/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>


        <repository>
            <id>JOSM Repository</id>
            <url>
                https://josm.openstreetmap.de/nexus/content/repositories/releases/
            </url>
        </repository>


    </repositories>


    <dependencies>

        <dependency>
<!--            2版本有些对于Swing类的报错和解析变了，功能够用就行，我们又不用互联网那个-->
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.83</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.9.0</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.18.0</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>jide-oss</artifactId>
            <version>3.7.15</version>
        </dependency>



        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swingx</artifactId>
            <version>1.6.1</version>
        </dependency>

        <!--        com.raven.swing 有个 ButtonBadges 需要-->
        <dependency>
            <groupId>
                net.java.dev.timingframework
            </groupId>
            <artifactId>timingframework</artifactId>
            <version>
                1.0
            </version>
        </dependency>

        <!-- XChart, but exclude animated-gif-lib -->
        <dependency>
            <groupId>org.knowm.xchart</groupId>
            <artifactId>xchart</artifactId>
            <version>3.8.8</version>

            <exclusions>
                <exclusion>
                    <groupId>com.madgag</groupId>
                    <artifactId>animated-gif-lib</artifactId>
                </exclusion>

            </exclusions>
        </dependency>


        <dependency>
            <groupId>
                com.formdev
            </groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.6</version>
        </dependency>


        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.4.8-jre</version>
        </dependency>


        <dependency>
            <groupId>
                org.apache.logging.log4j
            </groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.24.3</version>
        </dependency>

        <dependency>
            <groupId>
                org.apache.logging.log4j
            </groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>2.24.3</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.24.3</version>
        </dependency>

        <dependency>
        <!--        不要升级，这是最后一个比较独立一个jar能行使功能的版本-->
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.1.3</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.27.1</version>
        </dependency>
        <dependency>
            <groupId>org.tukaani</groupId>
            <artifactId>xz</artifactId>
            <version>1.9</version>
        </dependency>

        <!--        不升级了，够用就行，因为我们不用滤镜什么的！-->
        <dependency>
            <groupId>com.github.weisj</groupId>
            <artifactId>jsvg</artifactId>
            <version>1.2.0</version>
        </dependency>

        <!--        这个更新很多处-->
        <dependency>
            <groupId>com.miglayout</groupId>
            <artifactId>miglayout-swing</artifactId>
            <version>4.2</version>
        </dependency>

        <!--        解析xml，老的东西，一般没用到，不用更新了-->
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.4</version>
        </dependency>
        <dependency>
            <groupId>com.github.samtools</groupId>
            <artifactId>htsjdk</artifactId>
            <version>4.3.0</version>

            <exclusions>
                <exclusion>
                    <groupId>org.openjdk.nashorn</groupId>
                    <artifactId>nashorn-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.4.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.4.1</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>org.apache.poi</groupId>-->
        <!--            <artifactId>poi-ooxml-schemas</artifactId>-->
        <!--            <version>4.1.2</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.apache.poi</groupId>-->
        <!--            <artifactId>poi-ooxml-full</artifactId>-->
        <!--            <version>5.4.1</version>-->
        <!--        </dependency>-->

        <!--        下面的运行时都不重要-->
        <dependency>
            <groupId>com.carrotsearch</groupId>
            <artifactId>java-sizeof</artifactId>
            <version>0.0.5</version>
        </dependency>

        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>


        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

</project>